--- a/.github/workflows/ci-docker.yaml
+++ b/.github/workflows/ci-docker.yaml
@@ -12,12 +12,14 @@ on:
       - 'crates/kreuzberg/**'
       - 'crates/kreuzberg-cli/**'
       - 'crates/kreuzberg-tesseract/**'
+      - 'crates/kreuzberg-pdfium-render/**'
       - 'docker/**'
       - '.dockerignore'
       - 'Cargo.toml'
       - 'Cargo.lock'
       - '.cargo/config.toml'
       - 'scripts/ci/docker/**'
+      - 'scripts/test_docker*.sh'
   pull_request:
     branches: [main]
     paths:
@@ -26,12 +28,14 @@ on:
       - 'crates/kreuzberg/**'
       - 'crates/kreuzberg-cli/**'
       - 'crates/kreuzberg-tesseract/**'
+      - 'crates/kreuzberg-pdfium-render/**'
       - 'docker/**'
       - '.dockerignore'
       - 'Cargo.toml'
       - 'Cargo.lock'
       - '.cargo/config.toml'
       - 'scripts/ci/docker/**'
+      - 'scripts/test_docker*.sh'
   workflow_dispatch:
     inputs:
       skip_tests:
@@ -161,3 +165,103 @@ jobs:
         if: success()
         shell: bash
         run: scripts/ci/docker/summary.sh "${{ matrix.variant }}" /tmp/kreuzberg-docker-test-results.json
+
+  test-docker-cli:
+    name: Build and Test Docker CLI Image
+    if: ${{ github.actor != 'dependabot[bot]' }}
+    runs-on: ubuntu-latest
+    timeout-minutes: 180
+    permissions:
+      contents: read
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Free up disk space
+        shell: bash
+        run: scripts/ci/docker/free-disk-space.sh
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build Docker CLI image
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          file: docker/Dockerfile.cli
+          push: false
+          load: true
+          tags: kreuzberg:cli
+          cache-from: type=gha
+          cache-to: type=gha,mode=max,scope=ci-docker-cli
+
+      - name: Test Docker image size
+        shell: bash
+        run: |
+          size_mb=$(docker inspect kreuzberg:cli --format='{{.Size}}' | awk '{print int($1/1024/1024)}')
+          echo "CLI image size: ${size_mb}MB"
+          if [ "$size_mb" -gt 200 ]; then
+            echo "::warning::CLI image is larger than 200MB (${size_mb}MB). Expected a minimal static binary image."
+          fi
+
+      - name: Run CLI feature tests
+        if: ${{ !inputs.skip_tests }}
+        run: scripts/ci/docker/run-cli-tests.sh
+
+      - name: Save Docker image as artifact
+        if: success()
+        shell: bash
+        run: |
+          mkdir -p /tmp
+          docker save kreuzberg:cli | gzip > /tmp/kreuzberg-cli.tar.gz
+          ls -lh /tmp/kreuzberg-cli.tar.gz
+
+      - name: Upload Docker image artifact
+        if: success()
+        uses: actions/upload-artifact@v4
+        with:
+          name: docker-image-cli
+          path: /tmp/kreuzberg-cli.tar.gz
+          retention-days: 7
+          compression-level: 0
+
+      - name: Upload test results
+        if: always() && !inputs.skip_tests && hashFiles('/tmp/kreuzberg-docker-cli-test-results.json') != ''
+        uses: actions/upload-artifact@v4
+        with:
+          name: docker-test-results-cli
+          path: /tmp/kreuzberg-docker-cli-test-results.json
+          retention-days: 7
+
+      - name: Collect Docker logs on failure
+        if: failure()
+        shell: bash
+        run: scripts/ci/docker/collect-logs.sh /tmp/docker-logs
+
+      - name: Upload Docker logs
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: docker-logs-cli
+          path: /tmp/docker-logs/
+          retention-days: 7
+
+      - name: Clean up Docker resources
+        if: always()
+        shell: bash
+        run: |
+          docker ps -aq --filter "name=kreuzberg-cli-test" | xargs -r docker rm -f || true
+          docker rmi kreuzberg:cli || true
+          docker system prune -af --volumes || true
+
+      - name: Summary
+        if: success()
+        shell: bash
+        run: |
+          echo "Docker CLI image built and tested successfully!"
+          echo "Image: kreuzberg:cli"
+          if [ -f /tmp/kreuzberg-docker-cli-test-results.json ]; then
+            echo "Test Results:"
+            jq . < /tmp/kreuzberg-docker-cli-test-results.json || cat /tmp/kreuzberg-docker-cli-test-results.json
+          fi
