--- a/.github/workflows/benchmarks.yaml
+++ b/.github/workflows/benchmarks.yaml
@@ -1618,6 +1618,7 @@ jobs:
           EOF
 
           gh release create "$TAG" \
+            --prerelease \
             --title "Benchmark Results ${DATE} (${SHORT_SHA})" \
             --notes "Comparative benchmark results from workflow run [${{ github.run_id }}](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}).
 
