fix(ci): fix validate, rust e2e, java e2e, and csharp e2e failures
- Add rust_out to .gitignore (clippy --fix temp file breaks validate)
- Add serde rename_all=lowercase to ChunkerType enum for API consistency
- Populate djot_content in pipeline when output_format is Djot
- Fix Java E2E: Table record accessors, Optional unwrap, DjotContent API
- Fix C# E2E: Table.Markdown property, DjotContent.PlainText usage

--- a/.gitignore
+++ b/.gitignore
@@ -214,6 +214,9 @@ packages/csharp/test_html_debug.cs
 .codex/skills/elixir-bindings-patterns/SKILL.md
 packages/php/tests.xml
 
+# Clippy fix temporary output
+rust_out
+
 # Go test binaries
 tests/test_apps/go/kreuzberg-test-suite
 tests/test_apps/go/main
