--- a/.github/workflows/publish-docker.yaml
+++ b/.github/workflows/publish-docker.yaml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
     inputs:
       tag:
-        description: "Release tag to build (e.g., v4.0.0-rc.1)"
+        description: "Release tag to build (e.g., v4.3.6)"
         required: true
         type: string
       dry_run:
