--- a/.github/workflows/benchmarks.yaml
+++ b/.github/workflows/benchmarks.yaml
@@ -1555,7 +1555,7 @@ jobs:
       - name: Install build tools
         run: |
           sudo apt-get update
-          sudo apt-get install -y build-essential pkg-config libgl1-mesa-glx libglib2.0-0
+          sudo apt-get install -y build-essential pkg-config libgl1 libglib2.0-0
 
       - name: Install mineru benchmark dependencies
         run: uv sync --no-build-package kreuzberg --group dev --group bench-mineru --all-extras --all-packages --no-install-project --no-install-workspace
